--- a/stable/Insco.PicGuard.locale.en-US.yaml
+++ b/stable/Insco.PicGuard.locale.en-US.yaml
@@ -4,7 +4,7 @@
 PackageIdentifier: Insco.PicGuard
 PackageVersion: ${version}
 PackageLocale: en-US
-Publisher: Insco LLC
+Publisher: Insco Ltd
 PublisherUrl: https://www.picguard.app
 PublisherSupportUrl: https://github.com/picguard/picguard/discussions
 PrivacyUrl: https://www.picguard.app/en/legal/privacy
