fix: use run-name

--- a/.github/workflows/gen-beta.yml
+++ b/.github/workflows/gen-beta.yml
@@ -1,4 +1,5 @@
-name: Generate Beta Manifest
+name: Generate Manifest (Beta)
+run-name: Generate Manifest (Beta) ${{ inputs.tag_name }}
 
 on:
   workflow_dispatch:
