--- a/.github/workflows/remove.yml
+++ b/.github/workflows/remove.yml
@@ -48,7 +48,7 @@ jobs:
             manifests/i/Insco
             .gitattributes
             .gitignore
-          token: ${{ secrets.PAT }}
+          token: ${{ secrets.WINGET_UPDATER_TOKEN }}
 
       - name: Pull & Push
         run: |
@@ -86,7 +86,7 @@ jobs:
     steps:
       - name: Create Pull Request
         env:
-          GH_TOKEN: ${{ secrets.PAT }}
+          GH_TOKEN: ${{ secrets.WINGET_UPDATER_TOKEN }}
         run: |
           gh pr create \
             --repo https://github.com/microsoft/winget-pkgs \
