feat: add pro version for winget

--- a/.github/workflows/pr-pro-beta.yml
+++ b/.github/workflows/pr-pro-beta.yml
@@ -1,5 +1,5 @@
-name: Remove Version
-run-name: Remove Version ${{ inputs.tag_name }}
+name: PR (Pro Beta)
+run-name: PR (Pro Beta) ${{ inputs.tag_name }}
 
 on:
   workflow_dispatch:
@@ -36,9 +36,16 @@ jobs:
         env:
           TAG_NAME: ${{ inputs.tag_name }}
 
+  generate:
+    uses: ./.github/workflows/gen-pro-beta.yml
+    needs: get_version
+    with:
+      tag_name: ${{ inputs.tag_name }}
+
   commit:
     needs:
       - get_version
+      - generate
     runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@v4
@@ -60,11 +67,19 @@ jobs:
 
       - name: Create branch
         run: |
-          git branch Remove-Insco.PicGuard-${{ needs.get_version.outputs.version }}
-          git switch Remove-Insco.PicGuard-${{ needs.get_version.outputs.version }}
+          git branch Insco.PicGuard.Pro.Beta-${{ needs.get_version.outputs.version }}
+          git switch Insco.PicGuard.Pro.Beta-${{ needs.get_version.outputs.version }}
 
-      - name: Remove version
-        run: rm -rf manifests/i/Insco/PicGuard/${{ needs.get_version.outputs.version }}
+      - name: Recreate directory
+        run: |
+          rm -rf manifests/i/Insco/PicGuard/Pro/Beta
+          mkdir -pv manifests/i/Insco/PicGuard/Pro/Beta/${{ needs.get_version.outputs.version }}
+
+      - name: Download a Build Artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: manifest-pro-${{ inputs.tag_name }}.rc
+          path: manifests/i/Insco/PicGuard/Pro/Beta/${{ needs.get_version.outputs.version }}
 
       - name: Commit & Push
         run: |
@@ -72,8 +87,8 @@ jobs:
           git config --global user.name "${{ vars.GIT_NAME }}"
           git config --global core.autocrlf false
           git add .
-          git commit -m "Remove version: Insco.PicGuard version ${{ needs.get_version.outputs.version }}"
-          git push --set-upstream origin Remove-Insco.PicGuard-${{ needs.get_version.outputs.version }}
+          git commit -m "New version: Insco.PicGuard.Pro.Beta version ${{ needs.get_version.outputs.version }}"
+          git push --set-upstream origin Insco.PicGuard.Pro.Beta-${{ needs.get_version.outputs.version }}
 
   pr:
     if: ${{ inputs.is_pr }}
@@ -82,7 +97,7 @@ jobs:
       - commit
     runs-on: ubuntu-22.04
     environment:
-      name: Deploy-Pull-Request-Removed
+      name: Deploy-Pull-Request-Pro-Beta
     steps:
       - name: Create Pull Request
         env:
@@ -91,6 +106,6 @@ jobs:
           gh pr create \
             --repo https://github.com/microsoft/winget-pkgs \
             --base master \
-            --head ${{ github.repository_owner }}:Remove-Insco.PicGuard-${{ needs.get_version.outputs.version }} \
-            --title "Remove version: Insco.PicGuard version ${{ needs.get_version.outputs.version }}" \
+            --head ${{ github.repository_owner }}:Insco.PicGuard.Pro.Beta-${{ needs.get_version.outputs.version }} \
+            --title "New version: Insco.PicGuard.Pro.Beta version ${{ needs.get_version.outputs.version }}" \
             --body "### Pull request created by [PicGuard-WinGet-Updater](https://github.com/${{ github.repository }}) workflow run [#${{ github.run_number }}](https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}/attempts/${{ github.run_attempt }})"
