--- a/beta/Insco.PicGuard.Pro.Beta.locale.zh-CN.yaml
+++ b/beta/Insco.PicGuard.Pro.Beta.locale.zh-CN.yaml
@@ -6,11 +6,11 @@ PackageVersion: ${version}
 PackageLocale: zh-CN
 Publisher: Insco
 PublisherUrl: https://www.insco.io
-PublisherSupportUrl: https://www.picguard.app/zh/support
-PrivacyUrl: https://www.picguard.app/zh/legal/privacy
+PublisherSupportUrl: https://picguard.app/zh/support
+PrivacyUrl: https://picguard.app/zh/legal/privacy
 Author: kjxbyz
 PackageName: PicGuard Pro(Beta)
-PackageUrl: https://www.picguard.app
+PackageUrl: https://picguard.app
 License: GPL-3.0
 LicenseUrl: https://raw.githubusercontent.com/picguard/picguard/main/LICENSE
 Copyright: Copyright (c) 2023 kjxbyz
