--- a/beta/Insco.PicGuard.Pro.Beta.locale.en-US.yaml
+++ b/beta/Insco.PicGuard.Pro.Beta.locale.en-US.yaml
@@ -4,16 +4,16 @@
 PackageIdentifier: Insco.PicGuard.Pro.Beta
 PackageVersion: ${version}
 PackageLocale: en-US
-Publisher: Insco
-PublisherUrl: https://www.insco.io
-PublisherSupportUrl: https://picguard.app/en/support
+Publisher: Qiazo
+PublisherUrl: https://qiazo.com
+PublisherSupportUrl: https://qiazo.com/en/support
 PrivacyUrl: https://picguard.app/en/legal/privacy
 Author: kjxbyz
 PackageName: PicGuard Pro(Beta)
 PackageUrl: https://picguard.app
 License: GPL-3.0
 LicenseUrl: https://raw.githubusercontent.com/picguard/picguard/main/LICENSE
-Copyright: Copyright (c) 2023 kjxbyz
+Copyright: Copyright (c) 2023 Qiazo
 ShortDescription: Your pictures, your signature.
 Description: |
   Introducing **PicGuard Pro** - the ultimate solution for securing and customizing your digital photos. With our app, you can easily add watermarks to your images to protect your creative work and maintain your privacy.
